...
        android:paddingBottom="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:listitem="@layout/event_list_item" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Sort Events By Rating"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Club/Party/Concert"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adventure Events"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leisure Events"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sports Events"
            android:textColor="@color/white" />

    </com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/search_button"
...
